# urban-codesign

./: .gitignore  README.md  designer.ipynb  layout.py  package-lock.json  pyproject.toml
out-mcdp_plot/: urban_space-dp_graph_flow.dot
out-query/: 200s-fun-res20-(3000,50).yaml  200s-fun-res400-2000x25.yaml  200s-fun-res400-2000x50.yaml  200s-fun-res400-2500x25.yaml  200s-fun-res400-2500x50.yaml  200s-fun-res400-3000x25.yaml  200s-fun-res400-3000x50.yaml  200s-res-res160-(0.1).yaml  200s-res-res160-(0.2).yaml  200s-res-res160-(0.3).yaml  200s-res-res400-0.1.yaml  200s-res-res400-0.2.yaml  200s-res-res400-0.3.yaml  200s-res-res400-0.4.yaml  200s-res-res400-0.5.yaml  200s-res-res400-0.7.yaml  200s-res-res80-(0.1).yaml  can-output23fun-res80-200s--(5000$,100kg).yaml  can-output24res-res80-200s--(0.1,0.1,0.1).yaml  can-output25fun-res80-400s--(5000$,100kg).yaml  can-output26res-res80-400s--(0.1,0.1,0.1).yaml  can-output27res-res320-400s--(0.1,0.1,0.1).yaml  can-output28res-res80-400s--(0.1,0.1,0.1)(fixes).yaml  can-output29fun-res10-400s--(4000$, 100kg)fixes.yaml  can-output30res-res80-400s--(0.15,0.1,0.1)fixes.yaml  can-output31res-res160-400s-(0.15)fixes.yaml  can-output32res-res160-400s-0.2-fixes.yaml  designer.ipynb  output.yaml  output1-no-restriction-50.yaml  output10-res10-100sampled.yaml  output11-res20-100sampled.yaml  output12-res40-100sampled.yaml  output13-res80-100sampled.yaml  output14-res80-200sampled.yaml  output15-res80-400sampled.yaml  output16-res10-400sampled.yaml  output17-res10-1Ksampled.yaml  output18-res80-500sampled.yaml  (+12 more)
src/: layout_logic.py  (+1 more)
(+54 files in other folders)
